# CS240_Course_Project

./: Announcement.zh.tex  Poster.tex  Poster_A0.tex  Poster_Presentation_Script.tex  Poster_Presentation_Script.zh.tex  Presentation.tex  Presentation.zh.tex  Proposal.zh.tex  README.md  README.zh.md  Report.tex  Report.zh.tex  compact_project_proposal.tex  compact_project_proposal.zh.tex  proposal_review.md  pyproject.toml  requirements.txt
outputs/influence_maximization/: influence_results.csv  influence_results_large.csv
src/: experiments.py  graph_visualization.py  plotting.py
stages/Stage1_Background_Related_Work/: Stage1_Background_Related_Work.tex  Stage1_Background_Related_Work.zh.tex
stages/Stage2_Representative_Method_Selection/: Stage2_Representative_Method_Selection.tex  Stage2_Representative_Method_Selection.zh.tex
stages/Stage3_Reproduction_Implementation/: Stage3_Reproduction_Implementation.zh.tex
stages/Stage4_Experimental_Evaluation/: Stage4_Experimental_Evaluation.zh.tex
stages/Stage5_Optional_Extensions/: Stage5_Optional_Extensions.zh.tex
tests/: test_experiments.py
topic3_influence_maximization/: Proposal.tex  Proposal.zh.tex  references.bib
