[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cs240-influence-maximization"
version = "0.1.0"
description = "Distributed influence maximization experiments with greedy and CELF algorithms."
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "networkx>=3.3",
    "matplotlib>=3.8",
    "pandas>=2.2",
    "pytest>=8.0",
    "tqdm>=4.66",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
